--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,28 @@
 <head>
   <title>Chats</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 	 '//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta content='<%= user_signed_in? ? current_user.id : "" %>' name='user-id'/>
 </head>
 <body>
+
+<div class="info">
+  <ul>
+    <strong>
+    <% if signed_in? %>
+      <li>User:
+        <%= link_to current_user.username, user_url(current_user) %>
+      </li>
+      <li><%= link_to "Sign Out", session_url, :method => :delete %></li>
+    <% else %>
+      <li><%= link_to "Sign In", new_session_url %></li>
+      <li><%= link_to "Sign up", new_user_url %></li>
+    <% end %>
+    </strong>
+  </ul>
+</div>
 
 <%= yield %>
 
