--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,6 +16,6 @@
   </div>
 
   <div class="submit">
-    <input type="submit" value="<%= Create Account %>">
+    <input type="submit" value="Create Account">
   </div>
 </form>
