--- a/app/assets/stylesheets/chat.css
+++ b/app/assets/stylesheets/chat.css
@@ -38,7 +38,7 @@
     height: 280px;
     width: 280px;
     overflow-y: auto;
-    padding: 7px;
+    /*padding: 7px;*/
     border-left: 1px solid #cccccc;
     border-right: 1px solid #cccccc;
     border-bottom: 1px solid #eeeeee;
