--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <div class="info">
   <ul>
     <strong>
-    <% if signed_in? %>
+    <% if user_signed_in? %>
       <li>User:
         <%= link_to current_user.username, user_url(current_user) %>
       </li>
