--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,14 @@
 <h1>Index!</h1>
 
+<table>
 <% @users.each_with_index do |user, index| %>
     <tr>
       <td><%= index +=1 %></td>
-      <td><%= user.name %></td>
+      <td><%= user.username %></td>
       <td>
         <%= link_to "Send Message", "#", class: "btn btn-success btn-xs start-conversation",
                     "data-sid" => current_user.id, "data-rip" => user.id %>
       </td>
     </tr>
 <% end %>
+</table>
