Remove sound notify

--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -11,6 +11,6 @@
     	chatBox.chatWith(id);
         chatbox.children().last().removeClass("self").addClass("other");        
     	chatbox.scrollTop(chatbox[0].scrollHeight);
-        chatBox.notify();
+        // chatBox.notify();
     }
 <% end %>
